fix(banner): align icons and styles to updated design spec (#2082)
* fix: correct icons for select dropdown (#2079)

* fix: update icon names

* style: adjust styles to match spec

* style: correct lint error

* style: correct banner link colors

* style: convert to use pine vars

* docs: add link to danger preview

--- a/packages/sage-assets/lib/stylesheets/components/_banner.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_banner.scss
@@ -8,36 +8,38 @@
 $-banner-height-ladera: map-get($sage-banner-heights, ladera);
 $-banner-colors: (
   default: (
-    background: sage-color(primary, 300),
-    text: sage-color(white),
-    text-hover: sage-color(primary, 100),
-    icon: "flag",
+    background: var(--pine-color-purple-600),
+    text: var(--pine-color-white),
+    text-hover: var(--pine-color-purple-200),
+    icon: "info-circle-filled",
+    icon-color: var(--pine-color-purple-050),
   ),
   secondary: (
-    background: sage-color(grey, 200),
-    text: sage-color(grey, 950),
-    text-hover: sage-color(grey, 800),
-    icon: "info-circle",
+    background: var(--pine-color-grey-200),
+    text: var(--pine-color-grey-950),
+    text-hover: var(--pine-color-grey-800),
+    icon: "info-circle-filled",
+    icon-color: var(--pine-color-grey-700),
   ),
   warning: (
-    background: sage-color(yellow, 300),
-    text: sage-color(grey, 950),
-    text-hover: sage-color(grey, 800),
-    icon: "warning",
+    background: var(--pine-color-yellow-400),
+    text: var(--pine-color-yellow-950),
+    text-hover: var(--pine-color-yellow-800),
+    icon: "info-circle-filled",
+    icon-color: var(--pine-color-yellow-950),
   ),
   danger: (
-    background: sage-color(red, 500),
-    text: sage-color(white),
-    text-hover: sage-color(red, 150),
-    icon: "danger",
+    background: var(--pine-color-red-600),
+    text: var(--pine-color-red-050),
+    text-hover: var(--pine-color-red-200),
+    icon: "warning-filled",
+    icon-color: var(--pine-color-red-050),
   ),
 );
 $-banner-el-icon: "before";
 
 
 .sage-banner {
-  @extend %t-sage-body-med;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -47,7 +49,7 @@ $-banner-el-icon: "before";
   z-index: sage-z-index(negative);
   transform: translateY(-100px);
   width: 100%;
-  padding: sage-spacing(sm) sage-spacing(md);
+  padding: var(--pine-dimension-sm) var(--pine-dimension-md);
   color: map-get(map-get($-banner-colors, default), text);
   background: map-get(map-get($-banner-colors, default), background);
   transition: 0.3s ease-in-out;
@@ -64,7 +66,7 @@ $-banner-el-icon: "before";
 
   &::#{$-banner-el-icon} {
     @include sage-icon-base(map-get(map-get($-banner-colors, default), icon, pine));
-    margin-inline-end: sage-spacing(sm);
+    margin-inline-end: var(--pine-dimension-sm);
   }
 }
 
@@ -91,6 +93,7 @@ $-banner-el-icon: "before";
 
 .sage-banner__text {
   display: inline-flex;
+  font: var(--pine-typography-heading-6);
   margin-inline-end: auto;
   color: inherit;
 }
@@ -98,7 +101,14 @@ $-banner-el-icon: "before";
 .sage-banner__icon {
   display: inline-flex;
   align-self: center;
-  margin-inline-end: sage-spacing(sm);
+  margin-inline-end: var(--pine-dimension-sm);
+  color: map-get(map-get($-banner-colors, default), icon-color);
+
+  @each $name, $configs in $-banner-colors {
+    .sage-banner--#{$name} & {
+      color: map-get($configs, icon-color);
+    }
+  }
 }
 
 .sage-banner__link {
@@ -111,7 +121,7 @@ $-banner-el-icon: "before";
 }
 
 .sage-banner__close {
-  margin-inline-start: sage-spacing(sm);
+  margin-inline-start: var(--pine-dimension-sm);
 }
 
 .sage-banner__close,
