fix(empty-state): update rtl selector

--- a/packages/sage-assets/lib/stylesheets/components/_empty_state.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_empty_state.scss
@@ -30,7 +30,7 @@ $-empty-state-icon-compact-size: rem(56px);
   transform: translate(-50%, -50%);
   padding: sage-spacing();
 
-  [rtl] & {
+  [dir="rtl"] & {
     transform: translate(50%, -50%);
   }
 }
