--- a/packages/sage-assets/lib/stylesheets/components/_form_input.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_input.scss
@@ -149,13 +149,6 @@ $-input-text-height: var(--pine-font-size-body);
   }
 }
 
-.sage-input__field[type="tel"],
-.sage-input__field[type="email"],
-.sage-input__field[type="url"] {
-  direction: inherit; /* Inherits from parent context */
-  text-align: start; /* Logical start, so it auto-adjusts */
-}
-
 .sage-input__icon {
   grid-row: 2 / 3;
   grid-column: -1 / -2;
@@ -179,4 +172,18 @@ $-input-text-height: var(--pine-font-size-body);
   @include sage-form-field-message;
   display: flex;
   align-items: center;
+}
+
+// Ensures proper text direction for email/tel inputs - LTR for content, inherits direction for placeholder
+.sage-input__field[type="tel"],
+.sage-input__field[type="email"] {
+  text-align: start;
+
+  &:placeholder-shown {
+    direction: inherit;
+  }
+
+  &:not(:placeholder-shown) {
+    direction: ltr;
+  }
 }
