style(input): enhance form input with direction and alignment (#2109)

--- a/packages/sage-assets/lib/stylesheets/components/_form_input.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_form_input.scss
@@ -173,3 +173,17 @@ $-input-text-height: var(--pine-font-size-body);
   display: flex;
   align-items: center;
 }
+
+// Ensures proper text direction for email/tel inputs - LTR for content, inherits direction for placeholder
+.sage-input__field[type="tel"],
+.sage-input__field[type="email"] {
+  text-align: start;
+
+  &:placeholder-shown {
+    direction: inherit;
+  }
+
+  &:not(:placeholder-shown) {
+    direction: ltr;
+  }
+}
