--- a/packages/sage-assets/lib/stylesheets/core/_fonts.scss
+++ b/packages/sage-assets/lib/stylesheets/core/_fonts.scss
@@ -610,7 +610,7 @@ $noto-devanagari-font-family-name: "Noto Sans Devanagari";
 
 // Arabic font (Noto Sans Arabic)
 @font-face {
-  font-family: '#{$noto-arabic-font-family-name}';
+  font-family: "#{$noto-arabic-font-family-name}";
   src: local("#{$noto-arabic-file-name}"),
     url("#{$sage-noto-arabic-font-path}/#{$noto-arabic-file-name}.woff2?v=#{$body-font-version}") format("woff2");
   font-weight: normal;
@@ -619,7 +619,7 @@ $noto-devanagari-font-family-name: "Noto Sans Devanagari";
 
 // Hebrew font (Noto Sans Hebrew)
 @font-face {
-  font-family: '#{$noto-hebrew-font-family-name}';
+  font-family: "#{$noto-hebrew-font-family-name}";
   src: local("#{$noto-hebrew-file-name}"),
     url("#{$sage-noto-hebrew-font-path}/#{$noto-hebrew-file-name}.woff2?v=#{$body-font-version}") format("woff2");
   font-weight: normal;
@@ -628,7 +628,7 @@ $noto-devanagari-font-family-name: "Noto Sans Devanagari";
 
 // Devanagari font (Noto Sans Devanagari)
 @font-face {
-  font-family: '#{$noto-devanagari-font-family-name}';
+  font-family: "#{$noto-devanagari-font-family-name}";
   src: local("#{$noto-devanagari-file-name}"),
     url("#{$sage-noto-devanagari-font-path}/#{$noto-devanagari-file-name}.woff2?v=#{$body-font-version}") format("woff2");
   font-weight: normal;
