style: convert text-align to logical

--- a/docs/lib/sage-frontend/stylesheets/docs/_icon.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_icon.scss
@@ -28,7 +28,7 @@
 .docs-icon-inline {
   margin-block-end: sage-spacing(sm);
   padding: sage-spacing(sm);
-  text-align: right;
+  text-align: end;
   background: sage-color(grey, 150);
   border-radius: sage-border(radius);
   i {
