--- a/packages/sage-assets/lib/stylesheets/components/_dropdown.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_dropdown.scss
@@ -175,7 +175,7 @@ $-dropdown-trigger-dropdown-offset: rem(16px) + sage-spacing(xs);
   align-items: center;
   width: 100%;
   padding: rem(9px) sage-spacing(sm);
-  text-align: left;
+  text-align: start;
   text-decoration: none;
   border-radius: sage-border(radius);
   user-select: none;
