--- a/packages/sage-assets/lib/stylesheets/components/_table.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_table.scss
@@ -282,7 +282,7 @@ $-table-avatar-width: var(--pine-dimension-lg);
 }
 
 .sage-table-cell--align-right {
-  text-align: right;
+  text-align: end;
 }
 
 .sage-table-cell--align-center {
