--- a/packages/sage-assets/lib/stylesheets/components/_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_button.scss
@@ -182,7 +182,7 @@ $-btn-loading-min-height: rem(36px);
   justify-self: flex-start;
   padding: $-btn-base-padding-block $-btn-base-padding-inline;
   font-family: var(--sage-font-family-heading);
-  text-align: left; // Prevents text alignment issue when inner text is truncated
+  text-align: start; // Prevents text alignment issue when inner text is truncated
   border-width: 1px;
   border-style: solid;
   border-radius: $-btn-border-radius;
