--- a/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
@@ -90,7 +90,7 @@ $-copy-text-color-hover: var(--pine-color-text-secondary-hover);
 
 .sage-copy-btn--fill-container {
   width: 100%;
-  text-align: left;
+  text-align: start;
 
   .sage-btn__truncate-text {
     width: 100%;
