fix: adjust footer

--- a/docs/app/views/application/_footer.html.erb
+++ b/docs/app/views/application/_footer.html.erb
@@ -7,7 +7,7 @@
 
   <%= sage_component SageButtonGroup, { gap: :md } do %>
     <%= sage_component SageButton, {
-      value: "Version #{$SAGE_VERSION_GEM}",
+      value: "Version: #{$SAGE_VERSION_GEM}",
       attributes: {
         href: $SAGE_RELEASE_URL,
         target: "_blank",
