fix(button): update comment for empty string handling in button component

--- a/docs/lib/sage_rails/app/views/sage_components/_sage_button.html.erb
+++ b/docs/lib/sage_rails/app/views/sage_components/_sage_button.html.erb
@@ -44,7 +44,7 @@
         </pds-icon>
       <% end %>
       <span class="sage-btn__truncate-text">
-        <%# if the component.value is an empty string, add a `&nbsp;` to prevent height collapse %>
+        <%# if the component.value is an empty string, add `&nbsp;` to prevent height collapse %>
         <%= (component.value.strip.empty? ? "&nbsp;" : component.value).html_safe %>
       </span>
     <% elsif component.content %>
