fix: update ProgressBar component to handle color prop correctly

--- a/docs/app/views/examples/components/progress_bar/_preview.html.erb
+++ b/docs/app/views/examples/components/progress_bar/_preview.html.erb
@@ -1,7 +1,7 @@
 <h2 class="t-sage-heading-6">Default</h2>
 <%= sage_component SageProgressBar, {
   percent: 70,
-  label: "Cloning product"
+  label: "Cloning product",
 } %>
 
 <h2 class="t-sage-heading-6">Default with Percentage</h2>
@@ -11,7 +11,7 @@
   label: "Cloning product"
 } %>
 
-<h2 class="t-sage-heading-6">Default with Disabled Tooltip</h2>
+<h2 class="t-sage-heading-6">Progress with Disabled Tooltip</h2>
 <%= sage_component SageProgressBar, {
   color: SageTokens::COLOR_PALETTE[:ORANGE_300],
   disable_tooltip: true,
